<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:gravity="fill_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/gposbackpublicidad"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="0sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="4"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/gpo_back_gpo"
                    android:orientation="vertical" 
                    android:onClick="onClickA">

                    <Button
                        android:id="@+id/button4"
                        style="@style/BotonGrupos"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:onClick="onClickA"
                        android:text="@string/grupo_a" />

                    <GridLayout
                        android:id="@+id/gpoGridGrupoA"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:columnCount="2" >
                    </GridLayout>
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/gpo_back_gpo"
                     android:onClick="onClickB"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/button3"
                        style="@style/BotonGrupos"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:onClick="onClickB"
                        android:text="@string/grupo_b" />

                    <GridLayout
                        android:id="@+id/gpoGridGrupoB"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:columnCount="2" >
                    </GridLayout>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/gpo_back_gpo"
                    android:onClick="onClickC"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/button2"
                        style="@style/BotonGrupos"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:onClick="onClickC"
                        android:text="@string/grupo_c" />

                    <GridLayout
                        android:id="@+id/grid_grupoC"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:columnCount="2" >
                    </GridLayout>
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/gpo_back_gpo"
                    android:onClick="onClickD"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/button4"
                        style="@style/BotonGrupos"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:onClick="onClickD"
                        android:text="@string/grupo_d" />

                    <GridLayout
                        android:id="@+id/grid_grupoD"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:columnCount="2" >
                    </GridLayout>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/gpo_back_gpo"
                    android:onClick="onClickE"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/button5"
                        style="@style/BotonGrupos"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:onClick="onClickE"
                        android:text="@string/grupo_e" />

                    <GridLayout
                        android:id="@+id/grid_grupoE"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:columnCount="2" >
                    </GridLayout>
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/gpo_back_gpo"
                    android:onClick="onClickF"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/button6"
                        style="@style/BotonGrupos"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:onClick="onClickF"
                        android:text="@string/grupo_f" />

                    <GridLayout
                        android:id="@+id/grid_grupoF"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:columnCount="2" >
                    </GridLayout>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/gpo_back_gpo"
                    android:onClick="onClickG"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/button7"
                        style="@style/BotonGrupos"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:onClick="onClickG"
                        android:text="@string/grupo_g" />

                    <GridLayout
                        android:id="@+id/grid_grupoG"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:columnCount="2" >
                    </GridLayout>
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/gpo_back_gpo"
                    android:onClick="onClickH"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/button8"
                        style="@style/BotonGrupos"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:onClick="onClickH"
                        android:text="@string/grupo_h" />

                    <GridLayout
                        android:id="@+id/grid_grupoH"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:columnCount="2" >
                    </GridLayout>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>